# tauri-nuxt

./: .eslintrc.json  README.md  bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json  tailwind.config.js  tailwind.config.ts
components/Landing/: Footer.vue  Header.vue
layouts/: app_layout.vue  default.vue
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
